CICO-4888: Fixed late spacings

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -681,6 +681,10 @@ border-color:  #000000 !important;
 		padding: 50px 0 100px;
 	}
 
+	.jumbotron .check-inout-wrapper.late-options {
+		padding: 50px 0 60px;
+	}
+
 	.jumbotron .headtext {
 		font-size: 44px;
 		padding-top: 25px;
@@ -760,5 +764,12 @@ border-color:  #000000 !important;
 		.amount {
 			font-size: 40px;
 		}
+	}
+
+	.no-thanks {
+		clear: both;
+		float:right;
+		width: 50%;
+		padding-top: 60px;
 	}
 }
